--- a/Day_4 [Html and Web Scraping]/Program 1.html
+++ b/Day_4 [Html and Web Scraping]/Program 1.html
@@ -25,8 +25,10 @@
                 <li><a href = https://www.facebook.com target="_blank"> facebook </a></li>
             </ul>
             <img src = "image/pic1.jpg" alt = "Landscape">
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.vecteezy.com%2Fpng%2F22246404-mystical-mythical-character-phoenix-phoenix-bird-on-a-transparent-background-phoenix-logo-generative-ai&psig=AOvVaw3WtXSnmpJfJ71PBB03JM35&ust=1697517308669000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCKjM7PLe-YEDFQAAAAAdAAAAABAJ" alt="Pheonix">
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.everythingabode.com%2Fpastel-aesthetic-wallpaper-backgrounds%2F&psig=AOvVaw1o2ndjorQxRF-2LP_SkyEi&ust=1697517822925000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCJDTpejg-YEDFQAAAAAdAAAAABAE" alt="Rose">
             <div>
-                <h3 class="headings" id="last-heading"> Some heading with selector</h3>
+                <h3 class="headings" id="last_heading"> Some heading with selector</h3>
             </div>
         </body>
     </html>
